--- a/.github/workflows/common-action.yml
+++ b/.github/workflows/common-action.yml
@@ -1,16 +1,33 @@
 on:
   workflow_call:
     inputs:
-      profile:
-        required: true
-        type: string
       runner:
         required: true
         type: string
+    outputs:
+      auth-ver:
+        value: ${{ jobs.prepare.outputs.auth }}
+      currency-ver:
+        value: ${{ jobs.prepare.outputs.currency }}
+      gateway-ver:
+        value: ${{ jobs.prepare.outputs.gateway }}
+      spend-ver:
+        value: ${{ jobs.prepare.outputs.spend }}
+      userdata-ver:
+        value: ${{ jobs.prepare.outputs.userdata }}
+      front-ver:
+        value: ${{ jobs.prepare.outputs.front }}
 
 jobs:
+  runs-on: ${{ inputs.runner }}
   prepare:
-    runs-on: ${{ inputs.runner }}
+    outputs:
+      auth: ${{ steps.auth_version.outputs.version }}
+      currency: ${{ steps.currency_version.outputs.version }}
+      gateway: ${{ steps.gateway_version.outputs.version }}
+      spend: ${{ steps.spend_version.outputs.version }}
+      userdata: ${{ steps.userdata_version.outputs.version }}
+      front: ${{ steps.front_version.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -39,24 +56,11 @@ jobs:
         run: |
           echo "::set-output name=version::$(bash ./gradlew :niffler-userdata:printVersion -q)"
         id: userdata_version
-      - name: Push required props to GITHUB_ENV
-        run: |
-          echo "PROFILE=${{ inputs.profile }}" >> $GITHUB_ENV
-          echo "PREFIX=${{ vars.DOCKER_HUB_ACC }}" >> $GITHUB_ENV
-          echo "VAULT_TOKEN=${{ secrets.VAULT_TOKEN }}" >> $GITHUB_ENV
-          echo "AUTH_VER=${{ steps.auth_version.outputs.version }}" >> $GITHUB_ENV
-          echo "CURRENCY_VER=${{ steps.currency_version.outputs.version }}" >> $GITHUB_ENV
-          echo "GATEWAY_VER=${{ steps.gateway_version.outputs.version }}" >> $GITHUB_ENV
-          echo "SPEND_VER=${{ steps.spend_version.outputs.version }}" >> $GITHUB_ENV
-          echo "USERDATA_VER=${{ steps.userdata_version.outputs.version }}" >> $GITHUB_ENV
-          echo "FRONT_VER=${{ steps.front_version.outputs.version }}" >> $GITHUB_ENV
-          echo "FRONT_IMAGE=niffler-frontend" >> $GITHUB_ENV
       - name: Summary info
         run: |
-          echo "### profile be used: ${{ env.PROFILE }}"
-          echo "### niffler-auth version will be used: ${{ env.AUTH_VER }}"
-          echo "### niffler-currency version will be used: ${{ env.CURRENCY_VER }}"
-          echo "### niffler-gateway version will be used: ${{ env.GATEWAY_VER }}"
-          echo "### niffler-spend version will be used: ${{ env.SPEND_VER }}"
-          echo "### niffler-userdata version will be used: ${{ env.USERDATA_VER }}"
-          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
+          echo "### niffler-auth version will be used: ${{ steps.auth_version.outputs.version }}"
+          echo "### niffler-currency version will be used: ${{ steps.currency_version.outputs.version }}"
+          echo "### niffler-gateway version will be used: ${{ steps.gateway_version.outputs.version }}"
+          echo "### niffler-spend version will be used: ${{ steps.spend_version.outputs.version }}"
+          echo "### niffler-userdata version will be used: ${{ steps.userdata_version.outputs.version }}"
+          echo "### niffler-front version will be used: ${{ steps.front_version.outputs.version }}"
