--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -12,13 +12,23 @@ jobs:
     uses: ./.github/workflows/common-action.yml
     with:
       runner: niffler-prod-runner
-      profile: prod
   
   deploy:
     runs-on: niffler-prod-runner
-    needs:
-      - prepare
+    needs: prepare
     steps:
+      - name: Push required props to GITHUB_ENV
+        run: |
+          echo "PROFILE=prod" >> $GITHUB_ENV
+          echo "PREFIX=${{ vars.DOCKER_HUB_ACC }}" >> $GITHUB_ENV
+          echo "VAULT_TOKEN=${{ secrets.VAULT_TOKEN }}" >> $GITHUB_ENV
+          echo "AUTH_VER=${{ needs.prepare.outputs.auth-ver }}" >> $GITHUB_ENV
+          echo "CURRENCY_VER=${{ needs.prepare.outputs.currency-ver }" >> $GITHUB_ENV
+          echo "GATEWAY_VER=${{ needs.prepare.outputs.gateway-ver }" >> $GITHUB_ENV
+          echo "SPEND_VER=${{ needs.prepare.outputs.spend-ver }" >> $GITHUB_ENV
+          echo "USERDATA_VER=${{ needs.prepare.outputs.userdata-ver }" >> $GITHUB_ENV
+          echo "FRONT_VER=${{ needs.prepare.outputs.front-ver }" >> $GITHUB_ENV
+          echo "FRONT_IMAGE=niffler-frontend" >> $GITHUB_ENV
       - name: Docker login
         run: |
           docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
