--- a/.github/workflows/common-action.yml
+++ b/.github/workflows/common-action.yml
@@ -19,8 +19,8 @@ on:
         value: ${{ jobs.prepare.outputs.front }}
 
 jobs:
-  runs-on: "${{ inputs.runner }}"
   prepare:
+    runs-on: ${{ inputs.runner }}
     outputs:
       auth: ${{ steps.auth_version.outputs.version }}
       currency: ${{ steps.currency_version.outputs.version }}
