--- a/.github/workflows/niffler-frontend-gql-staging.yaml
+++ b/.github/workflows/niffler-frontend-gql-staging.yaml
@@ -23,11 +23,11 @@ jobs:
           echo "PREFIX=${{ vars.DOCKER_HUB_ACC }}" >> $GITHUB_ENV
           echo "VAULT_TOKEN=${{ secrets.VAULT_TOKEN }}" >> $GITHUB_ENV
           echo "AUTH_VER=${{ needs.prepare.outputs.auth-ver }}" >> $GITHUB_ENV
-          echo "CURRENCY_VER=${{ needs.prepare.outputs.currency-ver }" >> $GITHUB_ENV
-          echo "GATEWAY_VER=${{ needs.prepare.outputs.gateway-ver }" >> $GITHUB_ENV
-          echo "SPEND_VER=${{ needs.prepare.outputs.spend-ver }" >> $GITHUB_ENV
-          echo "USERDATA_VER=${{ needs.prepare.outputs.userdata-ver }" >> $GITHUB_ENV
-          echo "FRONT_VER=${{ needs.prepare.outputs.front-ver }" >> $GITHUB_ENV
+          echo "CURRENCY_VER=${{ needs.prepare.outputs.currency-ver }}" >> $GITHUB_ENV
+          echo "GATEWAY_VER=${{ needs.prepare.outputs.gateway-ver }}" >> $GITHUB_ENV
+          echo "SPEND_VER=${{ needs.prepare.outputs.spend-ver }}" >> $GITHUB_ENV
+          echo "USERDATA_VER=${{ needs.prepare.outputs.userdata-ver }}" >> $GITHUB_ENV
+          echo "FRONT_VER=${{ needs.prepare.outputs.front-ver }}" >> $GITHUB_ENV
           echo "FRONT_IMAGE=niffler-frontend-gql" >> $GITHUB_ENV
       - name: Docker login
         run: |
