--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -55,8 +55,8 @@ services:
   auth.niffler.dc:
     container_name: auth.niffler.dc
     image: ${PREFIX}/niffler-auth-${PROFILE}:latest
-    ports:
-      - "9000:9000"
+    expose:
+      - "9000"
     healthcheck:
       test: "wget --spider http://localhost:9000/actuator/health || exit 1"
       interval: 5s
@@ -87,8 +87,8 @@ services:
   gateway.niffler.dc:
     container_name: gateway.niffler.dc
     image: ${PREFIX}/niffler-gateway-${PROFILE}:latest
-    ports:
-      - "8090:8090"
+    expose:
+      - "8090"
     depends_on:
       auth.niffler.dc:
         condition: service_healthy
@@ -123,8 +123,8 @@ services:
   frontend.niffler.dc:
     container_name: frontend.niffler.dc
     image: "${FRONT_IMAGE}"
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     depends_on:
       gateway.niffler.dc:
         condition: service_started
@@ -166,23 +166,43 @@ services:
     depends_on:
       frontend.niffler.dc:
         condition: service_started
+    volumes:
+      - test-results:/niffler/niffler-e-2-e-tests/build/allure-results/
     networks:
       - test-network
     dns_search: .
 
   allure:
     container_name: allure
-    image: frankescobar/allure-docker-service
+    image: frankescobar/allure-docker-service:2.21.0
     depends_on:
       - niffler-e-2-e
+    volumes:
+      - test-results:/app/allure-results
     environment:
-      CHECK_RESULTS_EVERY_SECONDS: 3
-      KEEP_HISTORY: 0
+      CHECK_RESULTS_EVERY_SECONDS: 5
+      KEEP_HISTORY: 1
     ports:
       - "5050:5050"
     networks:
       - test-network
     dns_search: .
+
+  allure-ui:
+    container_name: allure-ui
+    image: frankescobar/allure-docker-service-ui:7.0.3
+    depends_on:
+      - allure
+    environment:
+      ALLURE_DOCKER_PUBLIC_API_URL: "http://localhost:5050"
+    ports:
+      - "5252:5252"
+    networks:
+      - test-network
+    dns_search: .
+
+volumes:
+  test-results:
 
 networks:
   test-network:
