--- a/.github/workflows/niffler-frontend-staging.yaml
+++ b/.github/workflows/niffler-frontend-staging.yaml
@@ -1,19 +1,27 @@
 name: frontend_deploy_stage
 on:
-  push:
-    branches-ignore:
-      - master
-    paths:
-      - '.github/workflows/niffler-frontend-staging.yaml'
-      - 'niffler-frontend/**'
+  workflow_run:
+    workflows: [ "e2e" ]
+    types:
+      - completed
 
 jobs:
   prepare:
+    if: |
+      github.event.workflow_run.event == 'workflow_run' && 
+      github.event.workflow_run.name == 'e2e' && 
+      github.event.workflow_run.conclusion == 'success' && 
+      contains(github.event_path, 'niffler-frontend/')
     uses: ./.github/workflows/common-action.yml
     with:
       runner: niffler-stage-runner
 
   deploy:
+    if: |
+      github.event.workflow_run.event == 'workflow_run' && 
+      github.event.workflow_run.name == 'e2e' && 
+      github.event.workflow_run.conclusion == 'success' && 
+      contains(github.event_path, 'niffler-frontend/')
     runs-on: niffler-stage-runner
     needs: prepare
     steps:
