--- a/.github/workflows/niffler-userdata-staging.yaml
+++ b/.github/workflows/niffler-userdata-staging.yaml
@@ -16,8 +16,9 @@ jobs:
           echo "### github.event.workflow_run.name: ${{ github.event.workflow_run.name }}"
           echo "### github.event.workflow_run.conclusion: ${{ github.event.workflow_run.conclusion }}"
           echo "### github.event_path: ${{ github.event_path }}"
-          echo "### github diff: ${{ "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})" }}"
-          echo "### github diff result: ${{ -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'userdata')" }}"
+          echo "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'userdata')"
+          echo "###"
+          echo "${{ -n $(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'userdata') }}"
   
 
   prepare:
