--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -31,11 +31,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Read docker.properties and extract front version
+      - name: Retrieve niffler-frontend version
         id: front_version
         run: |
-          FRONT_VERSION=$(grep '^FRONT_VERSION=' docker.properties | cut -d '=' -f 2)
-          echo "::set-output name=version::$FRONT_VERSION"
+          echo "::set-output name=version::$(grep '^FRONT_VERSION=' docker.properties | cut -d '=' -f 2)"
       - name: Retrieve niffler-auth version
         run: |
           echo "::set-output name=version::$(bash ./gradlew :niffler-auth:printVersion -q)"
@@ -62,5 +61,5 @@ jobs:
           echo "### niffler-currency version will be used: ${{ steps.currency_version.outputs.version }}"
           echo "### niffler-gateway version will be used: ${{ steps.gateway_version.outputs.version }}"
           echo "### niffler-spend version will be used: ${{ steps.spend_version.outputs.version }}"
-          echo "### niffler-userdata version will be used: ${{ env.PREFIX }}/niffler-userdata-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
-          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
+          echo "### niffler-userdata version will be used: ${{ steps.userdata_version.outputs.version }}"
+          echo "### niffler-front version will be used: ${{ steps.front_version.outputs.version }}"
