--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           gradle-version: 8.6
       - name: Build and run e2e-tests
-        id: test
+        id: e2e
         env:
           PROFILE: docker
           PREFIX: qaguru
@@ -42,7 +42,7 @@ jobs:
           docker ps -a
           docker wait niffler-e-2-e
           exit_code=$(docker inspect -f '{{.State.ExitCode}}' niffler-e-2-e)
-          echo "exit_code=exit_code" >> $GITHUB_OUTPUT
+          echo "e2e_exit_code=$exit_code" >> $GITHUB_OUTPUT
           echo "### Test logs ###"
           docker logs niffler-e-2-e
           docker compose -f docker-compose.test.yml down
@@ -66,7 +66,7 @@ jobs:
               head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
             })
             const pr = context.issue.number || issues.data[0].number
-            const exitCode = ${{ steps.test.outputs.exit_code }}
+            const exitCode = ${{ steps.e2e.outputs.e2e_exit_code }}
             const message = exitCode == '0' ? 
               '✅ TEST RUN PASSED ✅ There is the [report](https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/niffler-ng/reports/latest/index.html)\n🕓 All reports [history](https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/niffler-ng)' :
               '🔴 TEST RUN FAILED 🔴 There is the [report](https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/niffler-ng/reports/latest/index.html)\n🕓 All reports [history](https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/niffler-ng)'
