--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: niffler-all-db
     image: postgres:15.1
     environment:
-      - POSTGRES_MULTIPLE_DATABASES="niffler-auth","niffler-currency","niffler-spend","niffler-userdata"
+      - CREATE_DATABASES=niffler-auth,niffler-currency,niffler-spend,niffler-userdata
       - PGUSER=postgres
       - POSTGRES_PASSWORD=secret
     volumes:
