--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ env.GITHUB_SHA }}
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -33,8 +35,7 @@ jobs:
           docker pull selenoid/vnc_chrome:127.0
       - name: Get the last commit message
         run: |
-          msg=$(git log -1 --pretty=%B)
-          echo "HEAD_COMMIT_MESSAGE=$msg" >> $GITHUB_ENV
+          echo "HEAD_COMMIT_MESSAGE=$(git show -s --format=%s)" >> $GITHUB_ENV
       - name: Run e2e-tests
         id: e2e
         run: |
