--- a/niffler-gateway/build.gradle
+++ b/niffler-gateway/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '2.1.2'
+version = '2.2.0'
 
 dependencies {
     implementation project(':niffler-grpc-common')
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation('org.springframework.boot:spring-boot-starter-web-services') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
