--- a/niffler-spend/build.gradle
+++ b/niffler-spend/build.gradle
@@ -4,12 +4,13 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '2.0.2'
+version = '2.1.0'
 
 dependencies {
     implementation project(':niffler-grpc-common')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation "net.devh:grpc-client-spring-boot-starter:${project.ext.springGrpcVersion}"
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
