--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -121,7 +121,7 @@ niffler-front:
 niffler-auth:
   base-uri: 'https://auth.niffler.qa.guru'
 oauth2:
-  client-id: ${client-id}
+  web-client-id: ${web-client-id}
   mobile-client-id: ${mobile-client-id}
   mobile-custom-scheme: ${mobile-custom-scheme}
 ---
@@ -149,7 +149,7 @@ niffler-front:
 niffler-auth:
   base-uri: 'https://auth.niffler-stage.qa.guru'
 oauth2:
-  client-id: ${client-id}
+  web-client-id: ${web-client-id}
   mobile-client-id: ${mobile-client-id}
   mobile-custom-scheme: ${mobile-custom-scheme}
 ---
