--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -1,21 +1,20 @@
 buildscript {
     ext {
-        junitVersion = '5.11.4'
+        junitVersion = '5.12.1'
         allureVersion = '2.29.1'
-        selenideVersion = '7.7.1'
+        selenideVersion = '7.7.3'
         okhttp3Version = '4.11.0'
         retrofitVersion = '2.11.0'
         apollographqlVersion = '0.0.2'
         logbackVersion = '1.4.11'
         slf4jVersion = '2.0.9'
-        springJdbcVersion = '6.1.12'
-        springCryptoVersion = '6.3.1'
+        springJdbcVersion = '6.2.5'
+        springCryptoVersion = '6.4.4'
         p6spyVersion = '3.9.1'
         hibernateVersion = '6.6.0.Final'
-        kafkaClientsVersion = '3.8.0'
+        kafkaClientsVersion = '4.0.0'
         saajVersion = '3.0.4'
-        jakartaJaxbVersion = '4.0.2'
-        springDataCommonsVersion = '3.3.3'
+        springDataCommonsVersion = '3.4.4'
         wiremockVersion = '3.0.1'
         fakerVersion = '1.0.2'
         userdataWsdlUrl = System.getProperty("test.env") == "docker"
@@ -31,7 +30,7 @@ plugins {
     id 'io.qameta.allure' version '2.12.0'
     id 'io.qameta.allure-adapter' version '2.12.0'
     id 'com.github.edeandrea.xjc-generation' version '1.6'
-    id 'com.apollographql.apollo' version '4.0.0'
+    id 'com.apollographql.apollo' version '4.1.1'
 }
 
 group = 'guru.qa'
@@ -125,7 +124,7 @@ dependencies {
     testImplementation("com.github.javafaker:javafaker:${fakerVersion}") {
         exclude group: 'org.yaml'
     }
-    testImplementation 'commons-io:commons-io:2.16.1'
+    testImplementation 'commons-io:commons-io:2.18.0'
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     testImplementation 'com.github.vertical-blank:sql-formatter:2.0.5'
     // gRPC
@@ -138,7 +137,7 @@ dependencies {
     compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
     // SOAP
     testImplementation "com.sun.xml.messaging.saaj:saaj-impl:${saajVersion}"
-    testImplementation "jakarta.xml.bind:jakarta.xml.bind-api:${jakartaJaxbVersion}"
+    testImplementation "jakarta.xml.bind:jakarta.xml.bind-api:${project.ext.jakartaJaxbVersion}"
     xjc "org.glassfish.jaxb:jaxb-xjc:${project.ext.jakartaJaxbVersion}"
     // Kafka
     testImplementation "org.apache.kafka:kafka-clients:${kafkaClientsVersion}"
