--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -44,6 +44,8 @@ logging:
     org.springframework.web: INFO
     org.springframework.security: INFO
     org.springframework.security.oauth2: INFO
+    org.springframework.security.oauth2.server.authorization: INFO
+    org.springframework.security.web.authentication.logout: INFO
     org.springframework.web.cors: INFO
     org.apache.catalina.filters.RequestDumperFilter: INFO
     org.springframework.boot.autoconfigure: INFO
